k8s/gateway/04-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ewp-gateway
  namespace: ewp
spec:
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ewp-tls
      hosts:
        - "ewp.${TEST_DOMAIN}"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "ewp.${TEST_DOMAIN}"
      tls:
        httpsRedirect: true
